dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(apotheke, 0.1)
AM_CONFIG_HEADER(config.h)

AC_PROG_INTLTOOL

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

GNOME_COMPLIE_WARNINGS

dnl ******************************
dnl pkg-config checks
dnl ******************************
PKG_CHECK_MODULES(APOTHEKE, glib-2.0 gdk-pixbuf-2.0 gnome-vfs-2.0 gtk+-2.0 libnautilus libgnome-2.0)
AC_SUBST(APOTHEKE_CFLAGS)
AC_SUBST(APOTHEKE_LIBS)

dnl *******************************
dnl Internationalization
dnl ******************************* 
GETTEXT_PACKAGE=apotheke
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)

dnl Add the languages which your application supports here.
ALL_LINGUAS="de"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
icons/Makefile
po/Makefile.in])
